                -Added Birth Plan Encounter
                -Added HSA Encounter
                -Added HSA role [metadata]
                -Added migration for HSA villages
                -Added script for loading villages
                -Added Late for ANC Follow-up Call
                -Added Late for Delivery Follow-Up Call
            
-------------------------------------------------------------------------------------------------------------
2014-11-21
	DN - updated the query pulling health facilities to pull distinct facility names
	DN - updated the ANC concent number to allow 5 digits
  DN - removed G. before HSA when listing patients in ANC followup
  DN - replaced anc_visit with hsa_visit in the ancfollowuplist view.
2014-11-26
  DN - replaced '/people/villages' with '/people/villages_demographics
  DN - changed 'Home village' label to 'Current Village'
2014-11-27
  DN - added .uniq to distinctly list village names
2014-12-05
  PB - Ensured that TA is also used when searching for villages whether they are in anc connect pilot or not
2014-12-08
  PB - Modified the hsa_village script to create T/As if they dont exist in the system. This means that we will not need the hotline pilot TA
2014-12-11
  PB - Added extra logging details to TextIt integration file
2014-12-15
  DN - Fix queries for ANC followup and added a views to retrieve clients on folloup
2014-12-16
  DN - Added ANC followup views--in hotline_schema_additions
  DN - Updated database initial_script_setup to include hotline_schema_additions and run hsa_villages.sql script 
  DN - Added a view to get the clients' max_edd in hotline_schema_additions
  DN - Updated the query pulling clients on ANC followup report from number_of_days_after_reg >= 7 to >= 21
  DN - Added a condition to pull only programs that are not voided when pulling clients who are in ANC connect
2014-12-16
  PB - added rdoc and rcov gems to Gemfile
  PB - added rdoc and rcov gems to gem cache