@@ -31,7 +31,8 @@ CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
                            FROM `obs` `ob`
                            WHERE `ob`.`person_id` = `obs`.`person_id`
 			                     AND `ob`.`concept_id` = 6188
-                           AND `ob`.`voided` = 0);
+                           AND `ob`.`voided` = 0)
+  GROUP BY `obs`.`person_id`;                           
 
 -- retrieving all clients on ANC Connect program
 CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
@@ -44,12 +45,14 @@ CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
     `pa`.`city_village`,
     `pa`.`county_district`,
     `o`.`concept_id`,
-    `o`.`value_text` as `edd`,
-    floor((280 - DATEDIFF(DATE(`o`.`value_text`), CURDATE())) / 7) as `gestation_age`,
+    `edd`.`value_text` AS `edd`,
+    floor((280 - DATEDIFF(DATE(`edd`.`value_text`), CURDATE())) / 7) as `gestation_age`,
     DATEDIFF(CURDATE(),`pp`.`date_enrolled`) as `number_of_days_after_reg`,
     `pp`.`date_enrolled`,
     `nvd`.`value_text` as `next_visit_date`,
-    `cl`.`district`
+    `cl`.`district`,
+    `pp`.`voided`,
+    `e`.`encounter_type`
    FROM
     `encounter` `e`
         INNER JOIN
@@ -61,16 +64,17 @@ CREATE OR REPLACE ALGORITHM=UNDEFINED  SQL SECURITY INVOKER
         INNER JOIN
     `patient_program` `pp` ON `pp`.`patient_id` = `e`.`patient_id` and `pp`.`voided` = 0
         INNER JOIN
-    `obs` `o` ON `o`.`encounter_id` = `e`.`encounter_id`
+    `obs` `o` ON `o`.`encounter_id` = `e`.`encounter_id` and `e`.`voided` = 0
         INNER JOIN
     `obs` `obs_call` ON `o`.`encounter_id` = `obs_call`.`encounter_id`
-        AND `obs_call`.`concept_id` = 8304
+        AND `obs_call`.`concept_id` = 8304 and `obs_call`.`voided` = 0
         INNER JOIN
     `call_log` `cl` ON `obs_call`.`value_text` = `cl`.`call_log_id`
+    INNER JOIN `max_edd` `edd` ON `edd`.`person_id` = `e`.`patient_id`
         LEFT JOIN
     `max_next_visit_date` `nvd` ON `nvd`.`person_id` = `e`.`patient_id`
-        INNER JOIN `max_edd` `edd` ON `edd`.`person_id` = `e`.`patient_id`;
-
+  WHERE `o`.`concept_id` = 6188;
+    
 --
 -- Dumping routines for database 'bart2'
 --
